--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,21 @@
 {
-  "name": "Academic Hub - SRM BTech AI/ML",
-  "short_name": "Academic Hub",
-  "description": "Complete academic management system for SRM University students",
-  "start_url": "./",
-  "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#007AFF",
-  "orientation": "portrait-primary",
-  "scope": "./",
-  "icons": [
-    {
-      "src": "./icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "./icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "categories": ["education", "productivity"],
-  "lang": "en"
+    "name": "Academia Hub - Ultimate Study Companion",
+    "short_name": "Academia Hub",
+    "description": "Ultimate study companion with AI tutoring and study tracking",
+    "start_url": "./",
+    "display": "standalone",
+    "background_color": "#f0f9ff",
+    "theme_color": "#0284c7",
+    "icons": [
+        {
+            "src": "./academia-icon-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "./academia-icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
