--- a/manifest.json
+++ b/manifest.json
@@ -18,4 +18,35 @@
             "type": "image/png"
         }
     ]
+    {
+    "name": "Academic Hub - Study Dashboard",
+    "short_name": "Academic Hub",
+    "description": "Comprehensive study dashboard for BTech AI/ML students",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#0a0b0f",
+    "theme_color": "#667eea",
+    "orientation": "portrait-primary",
+    "icons": [
+        {
+            "src": "icons/icon-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "categories": ["education", "productivity"],
+    "screenshots": [
+        {
+            "src": "screenshots/desktop.png",
+            "sizes": "1280x720",
+            "type": "image/png"
+        }
+    ]
 }
+
+
