--- a/manifest.json
+++ b/manifest.json
@@ -9,22 +9,9 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "icons/icon-192.png",
+            "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'%3E%3Crect fill='%23667eea' width='192' height='192' rx='20'/%3E%3Ctext x='96' y='120' font-family='Arial' font-size='80' font-weight='bold' text-anchor='middle' fill='white'%3EAH%3C/text%3E%3C/svg%3E",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ],
-    "categories": ["education", "productivity"],
-    "screenshots": [
-        {
-            "src": "screenshots/desktop.png",
-            "sizes": "1280x720",
-            "type": "image/png"
+            "type": "image/svg+xml"
         }
     ]
 }
